# brainloop

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  com.brainloop.agent.plist.template  design_explorations.html  install.sh  requirements.txt  timed_oval_design_yesterday.html
app/: .gitignore  index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/web/: index.html  main.js  styles.css
apps/: brainloop_day_template.html  brainloop_switches.html  timed_oval_design.html
brainloop/: config.py
brainloop/capture/: workspace.py
daemon/: analyze.py  chat.py  config.py  daemon.py  db.py  prompts.py  providers.py
daemon/capture/: audio.py  ax.py  observer.py
docs/superpowers/plans/: 2026-04-17-brainloop-ui-skeleton.md
docs/superpowers/specs/: 2026-04-17-brainloop-ui-mvp-design.md
skills/: brainusagereport.md
